[package]
name = "arenaskl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
rand = "0.8.5"
lifeguard = "0.6.1"

[dev-dependencies]
criterion = "0.3.5"
threadpool = "1.0"
num_cpus = "1.0"

[[bench]]
name = "bench_main"
harness = false
